--- a/assets/table.css
+++ b/assets/table.css
@@ -1,9 +1,9 @@
-.scrolltable td, th {
+.scrolltable_l td, th {
 	border: 1px solid #ddd;
 }
 
 
-.scrolltable th {
+.scrolltable_l th {
     text-align: center;
     background-color: #4CAF50;
     color: white;
@@ -11,44 +11,130 @@
 }
 
 
-.scrolltable tr:hover {
+.scrolltable_l tr:hover {
 	background-color: #ddd;
 }
 
-.scrolltable tr:nth-child(even){
+.scrolltable_l tr:nth-child(even){
 	background-color: #f2f2f2;
 }
 
-.scrolltable thead tr {
-    display:block;
+
+.scrolltable_l th {
+	width: 1000px;
+	height: 150px;
 }
 
-
-.scrolltable tbody td, thead th {
-	width : 200px;
+.scrolltable_l td {
+	width: 1000px;
 	height: 100px;
 }
 
-.scrolltable button {
+.scrolltable_l button {
 	cursor : pointer;
 	background: transparent;
 	border: none !important;
-	width : 110px;
-	height: 90px;
 }
 
-
-.scrolltable tbody {
+.scrolltable_l tbody {
   display:block;
   height:400px;
   overflow:auto; 
 }
 
 
-.scrolltable {
-  table-layout:fixed;
+.scrolltable_h td, th {
+	border: 1px solid #ddd;
 }
 
+
+.scrolltable_h th {
+    text-align: center;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 12pt;
+}
+
+
+.scrolltable_h tr:hover {
+	background-color: #ddd;
+}
+
+.scrolltable_h tr:nth-child(even){
+	background-color: #f2f2f2;
+}
+
+
+.scrolltable_h th {
+	width: 1000px;
+	height: 150px;
+}
+
+.scrolltable_h td {
+	width: 1000px;
+	height: 100px;
+}
+
+.scrolltable_h button {
+	cursor : pointer;
+	background: transparent;
+	border: none !important;
+}
+
+.scrolltable_h tbody {
+  display:block;
+  height:400px;
+  width:auto;
+  overflow:auto; 
+}
+
+.scrolltable_f td, th {
+	border: 1px solid #ddd;
+}
+
+
+.scrolltable_f th {
+    text-align: center;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 12pt;
+}
+
+
+.scrolltable_f tr:hover {
+	background-color: #ddd;
+}
+
+.scrolltable_f tr:nth-child(even){
+	background-color: #f2f2f2;
+}
+
+
+.scrolltable_f th {
+	width: 1000px;
+	height: 150px;
+}
+
+.scrolltable_f td {
+	width: 1000px;
+	height: 100px;
+}
+
+.scrolltable_f button {
+	cursor : pointer;
+	background: transparent;
+	border: none !important;
+}
+
+.scrolltable_f tbody {
+  display:block;
+  height:400px;
+  overflow:auto; 
+}
+
+.scrolltable_f {
+  table-layout:fixed;
+}
 
 .cala input[type=text] {
     width: 5px;
